--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@vueuse/core": "^10.5.0",
+    "axios": "^1.5.1",
+    "element-plus": "^2.4.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
