--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^20.8.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
