--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.8.8",
     "@types/nprogress": "^0.2.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
