--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "path-browserify": "1.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
@@ -28,6 +29,7 @@
     "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.5",
+    "@types/path-browserify": "1.0.1"
   }
 }
