--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
@@ -16,20 +17,24 @@
     "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "path-browserify": "1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "4",
-    "path-browserify": "1.0.1"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
     "@types/node": "^20.8.8",
     "@types/nprogress": "^0.2.2",
+    "@types/path-browserify": "1.0.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "fast-glob": "^3.3.1",
     "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5",
-    "@types/path-browserify": "1.0.1"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-svg-loader": "^4.0.0",
+    "vue-tsc": "^1.8.5"
   }
 }
