--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noEmit": true,
     "jsx": "preserve",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
 
     // https://github.com/johnsoncodehk/volar/discussions/202
