--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.0",
+    "vite-plugin-vue-devtools": "^7.2.1",
     "vue-tsc": "^2.0.6"
   }
 }
