--- a/demo-ast/package.json
+++ b/demo-ast/package.json
@@ -4,12 +4,21 @@
   "description": "ast 学习笔记入门指南~",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/generator": "^7.24.10",
+    "@babel/parser": "^7.24.8",
+    "@babel/traverse": "^7.24.8",
+    "@types/node": "^20.14.11",
+    "@vitejs/plugin-vue": "^5.0.5",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "vue": "^3.4.33"
   }
 }
