--- a/demo-plugins/package.json
+++ b/demo-plugins/package.json
@@ -2,7 +2,6 @@
   "name": "demo-plugins",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
@@ -12,10 +11,18 @@
     "vue": "^3.4.31"
   },
   "devDependencies": {
+    "@babel/generator": "^7.24.10",
+    "@babel/parser": "^7.24.8",
+    "@babel/traverse": "^7.24.8",
+    "@rollup/pluginutils": "^5.1.0",
+    "@types/node": "^20.14.11",
     "@vitejs/plugin-vue": "^5.0.5",
+    "graphviz": "^0.0.9",
+    "qrcode-terminal": "^0.12.0",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
     "unplugin-auto-import": "^0.18.0",
+    "vite": "^5.3.4",
+    "vite-plugin-commonjs": "^0.10.1",
     "vite-plugin-vue-devtools": "^7.3.6",
     "vite-plugin-vue-inspector": "^5.1.2",
     "vue-tsc": "^2.0.24"
